# matrix_transposition_OpenMP

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  midterm.pbs  test_block_size.pbs  test_block_size.sh  test_implicit_flags.pbs  test_implicit_flags.sh  test_omp.pbs  test_omp.sh  utils.c
explicit/: explicit.c  explicit.h
implicit/: block_based.c  block_size.c  implicit.c  implicit.h  recursive.c
scripts/: test_block_size.sh  test_implicit_flags.sh  test_omp.sh
src/: main.c  main.h  utils.c
src/explicit/: explicit.c  explicit.h
src/implicit/: block_size.c  implicit.c  implicit.h
src/test_functions/: test_functions.c
test_functions/: test_functions.c
